// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Empty messsage with no expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No Expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`should render expense list with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExportListItem
      amount={10000}
      createdAt={0}
      description="lunch"
      id="1"
      key="1"
      note="pilau"
    />
    <ExportListItem
      amount={100000}
      createdAt={-259200000}
      description="Rent"
      id="2"
      key="2"
      note="March"
    />
    <ExportListItem
      amount={5000}
      createdAt={259200000}
      description="Coffee"
      id="3"
      key="3"
      note="Coffee"
    />
  </div>
</div>
`;
